--- a/src/resources/leaflet.html
+++ b/src/resources/leaflet.html
@@ -30,7 +30,7 @@
     L.tileLayer('https://mapserver.mapy.cz/zemepis-m/{z}-{x}-{y}', {
         attribution: "<img src=\"http://mapy.cz/img/logo-small.svg\" style=\"height: 10px\" /> © <a href=\"//www.seznam.cz\" target=\"_blank\">Seznam.cz, a.s.</a>, © <a href=\"//www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap</a>"
     }).addTo(map);
-    map.addControl(new L.Control.Draw({
+    map.addControl(DrawControl = new L.Control.Draw({
         edit: {
             featureGroup: geoEntities,
             poly: {
@@ -56,10 +56,10 @@
     });
 	
 	if(navigator.userAgent.indexOf("JavaFX") < 0) {
-		map.on("click", function(e) {
+		/* map.on("click", function(e) {
 			alert(e.latlng)
 			coord = e.latlng
-		})
+		}) */
 		
 		map.on(L.Draw.Event.EDITED, function (e) {
 			e.layers.eachLayer(function (layer) {
