Show only supported entities in toolbar

--- a/src/resources/leaflet.html
+++ b/src/resources/leaflet.html
@@ -41,7 +41,8 @@
             polygon: {
                 allowIntersection: false,
                 showArea: true
-            }
+            },
+			circlemarker: false
         }
     }));
 
