--- a/src/resources/leaflet.html
+++ b/src/resources/leaflet.html
@@ -30,6 +30,7 @@
     L.tileLayer('https://mapserver.mapy.cz/zemepis-m/{z}-{x}-{y}', {
         attribution: "<img src=\"http://mapy.cz/img/logo-small.svg\" style=\"height: 10px\" /> © <a href=\"//www.seznam.cz\" target=\"_blank\">Seznam.cz, a.s.</a>, © <a href=\"//www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap</a>"
     }).addTo(map);
+	
     map.addControl(DrawControl = new L.Control.Draw({
         edit: {
             featureGroup: geoEntities,
@@ -52,15 +53,15 @@
         geoEntities.addLayer(layer);
 		
 		layer.on("click", function(e) {
-			;
+			layer;
 		})
     });
 	
 	if(navigator.userAgent.indexOf("JavaFX") < 0) {
-		/* map.on("click", function(e) {
-			alert(e.latlng)
+		map.on("click", function(e) {
+			//alert(e.latlng)
 			coord = e.latlng
-		}) */
+		})
 		
 		map.on(L.Draw.Event.EDITED, function (e) {
 			e.layers.eachLayer(function (layer) {
@@ -71,6 +72,7 @@
 			})
 		})
 		//L.marker([51.5, -0.09]).addTo(map)
+		L.rectangle([[51.5, -0.09], [52.5, 1.09]]).addTo(map)
 	}
 
 </script>
