--- a/src/resources/leaflet.html
+++ b/src/resources/leaflet.html
@@ -11,6 +11,7 @@
     <script src="js.js"></script>
     <script src="leaflet.js"></script>
     <script src="leaflet.draw.js"></script>
+    <script src="bouncemarker.js"></script>
     <style type="text/css">
         html, body {
             height: 100%;
